[package]
name = "so-defi-accounts"
version = "0.1.4"
edition = "2021"
authors = ["Tulip Protocol"]
description = "accounts types for solana defi protocols"
keywords = ["solana", "configuration", "defi", "tulip-protocol"]
license = "MIT/Apache-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9"
borsh-derive = "0.9.1"
borsh = "0.9.1"
static-pubkey = "1.0.2"
[dev-dependencies]
solana-client = "1.9"