[package]
name = "so-defi-config"
version = "0.1.14"
edition = "2021"
authors = ["Tulip Protocol"]
description = "configuration crate for so-defi"
keywords = ["solana", "configuration", "defi", "tulip-protocol"]
license = "MIT/Apache-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
anyhow = "1.0.41"
solana-program = "1.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
so-defi-token-list = {path = "../token-list", version = "0.1.1"}