[package]
name = "so-defi-config"
version = "0.1.20"
edition = "2021"
authors = ["Tulip Protocol"]
description = "configuration crate for so-defi"
keywords = ["solana", "configuration", "defi", "tulip-protocol"]
license = "MIT/Apache-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
solana-program = "1.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
so-defi-token-list = {path = "../token-list", version = "0.1.1"}