[package]
name = "so-defi-pyth"
version = "0.1.7"
edition = "2021"
description = "stuff copied from https://github.com/pyth-network/pyth-sdk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["experimental"]
experimental = []
[dependencies]
borsh = "0.9.1"
bytemuck = "1.7.2"
solana-program = "1.9"
serde = { version = "1", features = ["derive"] }
schemars = "0.8.10"
hex = { version = "0.4.3", features = ["serde"] }
num-derive = "0.3"
num-traits = "0.2"
static-pubkey = "1.0.2"
thiserror = "1"
[dev-dependencies]
solana-client = "1.9"
serde_json = {version = "1"}