[package]
name = "so-defi-token-list"
version = "0.1.1"
edition = "2021"
authors = ["Tulip Protocol"]
description = "solana token-list parser"
keywords = ["solana", "token-list", "defi", "tulip-protocol"]
license = "MIT/Apache-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.64"
tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros"] }
